Fix stale references to MemorySession